<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_select_all"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/menu_select_all"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/menu_delete"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_export"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/menu_export"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_rename"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/menu_rename"
        app:showAsAction="ifRoom|withText" />
</menu>
